--- a/Views/Contact/index.cshtml
+++ b/Views/Contact/index.cshtml
@@ -1,8 +1,8 @@
 <h1 style="text-align:center ;">Contact Us</h1><hr><br>
 <form style="text-align: center;">
   <label for="fname">First name:</label>
-  <input type="text" id="fname" name="fname" value="John"><br><br>
+  <input type="text" id="fname" name="fname" value="Maddy"><br><br>
   <label for="lname">Last name:</label>
-  <input type="text" id="lname" name="lname" value="Doe"><br><br>
+  <input type="text" id="lname" name="lname" value="D"><br><br>
   <input type="button" value="Submit">
 </form>
